# neowall

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  BUILD.md  CHANGELOG.md  CITATION.cff  COMMANDS_IMPLEMENTED.md  COMMANDS_QUICK_REFERENCE.md  COMMAND_RENAME_SUMMARY.md  COMMAND_STRUCTURE_FINAL.md  DISPLAY_RECONNECTION.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TODO.md  LICENSE  Makefile  OPTIONAL_OUTPUT_ARGS_COMPLETE.md  PKGBUILD  PRE_COMMIT_CHECKLIST.md  PUBLISHING.md  README.md  READY_TO_COMMIT.md  SHORT_COMMIT_MSG.txt  USAGE_GUIDE.md  check_logs.sh  flake.nix  meson.build  meson_options.txt  ocean_optimized.glsl  ocean_ultra_optimized.glsl  test_config.vibe  test_memory_leaks.sh  test_shader.glsl
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  TOPICS.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  quality.yml  release.yml
assets/: README.md
config/: config.vibe  neowall.vibe  rb.vibe  staticwall.vibe
config/docs/: CONFIG.md
data/: meson.build  neowall_tray.desktop
docs/: ARCHITECTURE.md  BUILD_INTEGRATION.md  CHANGELOG copy.md  CHANGELOG.md  CLI_COMPLETE_CONTROL.md  CODE_SIMPLIFICATION_PROPOSAL.md  COMMAND_DESIGN.md  COMMAND_REGISTRY_IMPROVEMENTS.md  COMMIT_SUMMARY.md  COMPOSITOR_ABSTRACTION_OVERVIEW.md  CONFIG.md  CONFIG_COMMAND_MAPPING.md  CONFIG_GUIDE.md  CONFIG_PLAN.md  CONFIG_RULES.md  CONFIG_STATE_ARCHITECTURE.md  CONFIG_STATE_DESIGN.md  CONTRIBUTING.md  CURRENT_CONFIG_COMMANDS.md  DIRECTORY_CYCLING.md  DURATION_CONFIG_FIX.md  EGL_14_15_IMPLEMENTATION.md  ES30_ADVANCED_FEATURES.md  ICHANNELS.md  ICHANNEL_CONFIG.md  IDEAS.md  IMPLEMENTATION_STATUS.md  INSTALL.md  INTEGRATION_EXAMPLE.md  IPC_MIGRATION.md  MULTIPASS_OPTIMIZATION.md  MULTI_MONITOR_SYNC.md  MULTI_VERSION_ARCHITECTURE.md  OCEAN_OPTIMIZATION_GUIDE.md  OPTIMIZATION_GUIDE.md  PACKAGING.md  PERFORMANCE_OPTIMIZATION.md  PERSISTENT_CONFIG_DESIGN.md  PRELOAD_IMPLEMENTATION.md  PROJECT_OVERVIEW.md  (+19 more)
docs/architecture/: BACKEND_ABI.md  EVENTLOOP.md  RENDER_OOP_DESIGN.md
docs/commands/: COMMANDS.md  commands.json
examples/: config.vibe  config_validation_test.c  train_journey_optimized.glsl
examples/configs/: QUICK_REFERENCE.md  README.md  common_setups.vibe  complete_example.vibe  dynamic_ichannels_example.vibe  full_example.vibe  ichannels_practical.vibe  minimal.vibe  shadertoy_ichannels.vibe  simple_ichannels.vibe  test_custom_texture.vibe  test_dynamic_channels.vibe
examples/shaders/: README.md  audio_pulse.neowall  aurora.glsl  aurora_shadertoy.glsl  beach_shell.glsl  cyber.glsl  dna_helix.glsl  gradient.glsl  hologram.glsl  inercia_intended.glsl  liquid_metal.glsl  matrix.glsl  matrix_classic.glsl  mouse_ripples.neowall  nebula.glsl  new.glsl  (+12 more)
include/: compositor.h  config_access.h  constants.h  es30_features.h  neowall.h  shader.h  shadertoy_compat.h  staticwall.h  textures.h  transitions.h  version.h.in
packaging/: PKGBUILD  README.md  neowall.desktop  neowall.install  staticwall.install
protocols/: plasma-shell-client-protocol.c  plasma-shell-client-protocol.h  tablet-v2-client-protocol.h  wlr-foreign-toplevel-management-unstable-v1-client-protocol.c  wlr-foreign-toplevel-management-unstable-v1-client-protocol.h
schema/: commands.vibe  config.vibe
scripts/: bigclock.sh  check-egl-capabilities.sh  egl-check.sh  fix_config_refs.sh  generate-capability-code.sh  generate-protocols.sh  generate_icons.sh  validate_schema.sh
src/: config.c  egl.c  eventloop.c  image.c  main.c  output.c  render.c  shader.c  shader_adaptation.c  shadertoy_compat.c  utils.c  vibe.c  wayland.c
src/ipc/: README.md  meson.build  protocol.c  protocol.h  socket.h  socket_client.c  socket_server.c
src/neowall/: main.c  meson.build
src/neowall_tray/: main.c  meson.build
src/neowall_tray/common/: log.c  log.h
src/neowall_tray/daemon/: command_exec.c  command_exec.h  daemon_check.c  daemon_check.h
src/neowall_tray/dialogs/: about_dialog.c  about_dialog.h  dialogs.c  dialogs.h  settings_dialog.c  settings_dialog.h  shader_editor.c  shader_editor.h  status_dialog.c  status_dialog.h
src/neowall_tray/indicator/: indicator.c  indicator.h
src/neowall_tray/menu/: menu_builder.c  menu_builder.h  menu_callbacks.c  menu_callbacks.h  menu_items.c  menu_items.h
src/neowall_tray/ui/: style.css  ui_utils.c  ui_utils.h
src/neowalld/: eventloop.c  main.c  meson.build  shader.c  shadertoy_compat.c  utils.c
src/neowalld/commands/: README.md  commands.c  commands.h  config_commands.c  config_commands.h  output_commands.c  output_commands.h  registry.c
src/neowalld/compositor/: README.md
src/neowalld/compositor/backends/wayland/compositors/: fallback.c  kde_plasma.c
src/neowalld/config/: config.c  config.h  config_keys.h  config_rules.c  config_rules.h  config_schema.c  config_schema.h  config_schema_stub.c  config_write.c  config_write.h  vibe_path.c  vibe_path.h
src/neowalld/egl/: egl_core.c  egl_v11.c  gles_v20.c  gles_v30.c  gles_v31.c  gles_v32.c
src/neowalld/image/: image.c
src/neowalld/output/: output.c  output.h
src/neowalld/render/: render.c  render.h
src/neowalld/textures/: abstract.c  blue_noise.c  rgba_noise.c
src/neowalld/transitions/: fade.c
src/shader_lib/: adaptive_scale.c  adaptive_scale.h  meson.build  multipass_optimizer.c  neowall_shader_api.c  neowall_shader_api.h  platform_compat.h  render_optimizer.c  render_optimizer.h  shader.h  shader_adaptation.c  shader_core.c  shader_log.h  shader_multipass.c  shader_multipass.h  shader_utils.c  shader_utils.h  shadertoy_compat.c  shadertoy_compat.h
tests/: Makefile  README.md  fuzz_multipass.c  fuzz_vibe.c  meson.build  reactive_fft_wrapper.c  test_config_rules  test_config_rules.c  test_foundation.c  test_glyph_atlas.c  test_glyph_synth.c  test_image_exif.c  test_occlusion_set.c  test_output_refcount.c  test_reactive_fft.c  test_shadertoy_compat.c  test_shuffle.c  test_span.c  test_terminal_screen.c  test_utils.c  test_vibe.c  test_vibe_path.c  test_vibe_validation.c  test_x11_geometry.c  test_x11_wm_detect.c
tools/: generate_command_docs.sh
(+142 files in other folders)
